Code for adding scheduled hours and changes to INI

--- a/config.ini
+++ b/config.ini
@@ -7,4 +7,11 @@ rent = 575
 council tax = 164
 wifi = 27
 power = 57
+month = July
+
+[Payment Dates]
+rent = 1
+council tax = 1
+power = 15
+wifi = 2
 
